# xcli

./: .gitignore  README.md  pyproject.toml  xcli.sh
app/: cli.py  config.py
app/ai/: prompt.py  provider.py  translator.py
app/context/: models.py  service.py
app/executor/: executor.py  result.py
app/models/: command.py
app/security/: command_rule.py  policy_loader.py  rule_engine.py  rules.py  scanner.py  validation_result.py  validator.py
app/security/rules/: default.yaml
app/ui/: confirm.py  printer.py  ui.py
